MetadataNav: basic functions are working again